# ikor-apiconf-2026

./: .env.example  .gitignore  AI_RULES.md  DEVELOPMENT_LOG.md  Dev Notes.md  Dev Tasks.md  Ikor_Product_Brief_and_Launch_Plan.md  LICENSE  README.md  ROADMAP.md  SAYIKOR_SKILLS.md  SECURITY.md  audio_test.html  extracted_pdf_text.txt  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  payment-success.html  resize.ps1  vercel.json  vite.config.ts
.github/workflows/: publish.yml
public/: mappings.json  payment-success.html  robots.txt  sitemap.xml
public/logos/: .gitkeep
scratch/: diff_59ccbb3.txt  get_pos.ps1
src/: App.tsx  ContactSalesPage.tsx  LandingPage.tsx  PaymentSuccessPage.tsx  index.css  main.tsx  salesConfig.ts  vite-env.d.ts  waitlistConfig.ts
src-tauri/: 2  Cargo.toml  build_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_context.rs  audio_test.rs  lib.rs  local_whisper_stream.rs  native_recording.rs  scribe.rs
src/audio/: fastBatch.ts  queuedLocal.ts  ultraFastStream.ts
src/components/: ApprovalPanel.tsx  Dashboard.tsx  McpConfirmationModal.tsx  SettingsModal.tsx
src/components/Auth/: Authentication.tsx  Onboarding.tsx
src/components/Dashboard/: AddShortcutModal.tsx  AddTermModal.tsx  Dashboard.tsx  DeleteModal.tsx  EditShortcutModal.tsx  EditTermModal.tsx  ExhaustedModal.tsx  SettingsModal.tsx  (+6 more)
src/lib/: AuthProvider.tsx  googleSheets.ts  mcpClient.ts  salesSync.ts  supabase.ts  utils.ts  waitlistSync.ts
src/utils/: audio.ts  wordDeduction.ts
supabase/: config.toml
(+5 files in other folders)
