[package]
name = "sayikor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
volumecontrol = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
enigo = "0.3.0"
arboard = "3"
tauri-plugin-store = "2.4.3"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
whisper-rs = "0.11"
tauri-plugin-dialog = "2.0.0"
uiautomation = { version = "0.25.0", features = ["pattern", "control"] }
cpal = "0.15"
lazy_static = "1.4"
webview2-com = "0.38"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
opt-level = 0
lto = false
codegen-units = 16
panic = "abort"
strip = "debuginfo"

